[package]
authors = ["Zelzahn <friedrich@friedrichvdb.be>"]
categories = ["embedded", "hardware-support", "wasm", "no-std"]
description = "Implementation of the `embedded-hal` traits for Wasm components"
keywords = ["Wasm", "hal"]
license = "Apache-2.0"
name = "wasi-embedded-hal"
repository = "https://github.com/Zelzahn/wasi-embedded-hal"
version = "0.2.0"
edition = "2021"

[dependencies]
bitflags = "2.4.2"
embedded-hal = "1.0.0"
lol_alloc = "0.4.1"
wit-bindgen-rt = "0.22.0"

[features]
default = ["use_std"]
use_std = ["use_alloc"]
use_alloc = []
